[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.docc]
discovery = [
    "docc.html.discover",
    "docc.cst.discover",
    "docc.listing.discover",
]

build = [
    "docc.cst.build",
    "docc.listing.build",
    "docc.resources.build",
]

transform = [
    "docc.cst.transform",
    "docc.mistletoe.transform",
    "docc.references.index",
    "docc.html",
]

[tool.docc.plugins."docc.cst.discover"]
paths = [
    "src",
]

[tool.docc.output]
path = "docs"
