[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.docc]
context = [
    "docc.references.context",
    "docc.search.context",
]

discovery = [
    "docc.search.discover",
    "docc.html.discover",
    "docc.python.discover",
    "docc.listing.discover",
]

build = [
    "docc.search.build",
    "docc.python.build",
    "docc.listing.build",
    "docc.resources.build",
]

transform = [
    "docc.python.transform",
    "docc.mistletoe.transform",
    "docc.references.index",
    "docc.search.transform",
    "docc.html",
]

[tool.docc.plugins."docc.python.discover"]
paths = [
    "src",
]

[tool.docc.output]
path = "docs"
