[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.docc.plugins."docc.python.discover"]
paths = [ "src" ]

[tool.docc.output]
path = "docs"

[tool.pytest.ini_options]
# term-missing shows uncovered line numbers in terminal output
addopts = "--cov=docc --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/docc"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
