[metadata]
name = docc
description = Python code documentation compiler
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: docc.__version__
url = https://github.com/SamWilsn/docc
license_files =
    LICENSE.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:

python_requires = >=3.8
install_requires =
    libcst>=1.0.1,<2
    mistletoe>=1.0.1,<2
    importlib-metadata>=4.4,<6; python_version < "3.10"
    importlib-resources>=5.12,<6
    tomli>=2.0.1,<3
    rich>=12.6.0,<13
    Jinja2>=3.1.2,<4
    inflection>=0.5.1,<0.6
    typing-extensions>=4.4.0,<5

[options.packages.find]
where = src

[options.package_data]
docc =
    py.typed

docc.plugins.html =
    templates/**
    static/docc.css
    static/search.js
    static/chota/dist/chota.min.css
    static/fuse/dist/fuse.min.js

docc.plugins.listing =
    templates/**

docc.plugins.python =
    templates/**

[options.entry_points]
console_scripts =
    docc = docc.cli:main

docc.plugins =
    docc.python.discover = docc.plugins.python:PythonDiscover
    docc.python.build = docc.plugins.python:PythonBuilder
    docc.python.transform = docc.plugins.python:PythonTransform
    docc.html.transform = docc.plugins.html:HTMLTransform
    docc.html.discover = docc.plugins.html:HTMLDiscover
    docc.html.context = docc.plugins.html:HTMLContext
    docc.references.context = docc.plugins.references:IndexContext
    docc.references.index = docc.plugins.references:IndexTransform
    docc.mistletoe.transform = docc.plugins.mistletoe:DocstringTransform
    docc.listing.discover = docc.plugins.listing:ListingDiscover
    docc.listing.build = docc.plugins.listing:ListingBuilder
    docc.resources.build = docc.plugins.resources:ResourceBuilder
    docc.files.build = docc.plugins.files:FilesBuilder
    docc.files.discover = docc.plugins.files:FilesDiscover
    docc.search.context = docc.plugins.search:SearchContext
    docc.search.transform = docc.plugins.search:SearchTransform
    docc.search.discover = docc.plugins.search:SearchDiscover
    docc.search.build = docc.plugins.search:SearchBuilder
    docc.debug.transform = docc.plugins.debug:DebugTransform
    docc.verbatim.transform = docc.plugins.verbatim:Transcribe

docc.plugins.html =
    docc.document:BlankNode = docc.plugins.html:blank_node
    docc.document:ListNode = docc.plugins.html:list_node
    docc.plugins.python.nodes:Module = docc.plugins.python.html:render_module
    docc.plugins.python.nodes:Class = docc.plugins.python.html:render_class
    docc.plugins.python.nodes:Attribute = docc.plugins.python.html:render_attribute
    docc.plugins.python.nodes:Name = docc.plugins.python.html:render_name
    docc.plugins.python.nodes:Access = docc.plugins.python.html:render_access
    docc.plugins.python.nodes:Function = docc.plugins.python.html:render_function
    docc.plugins.python.nodes:Parameter = docc.plugins.python.html:render_parameter
    docc.plugins.python.nodes:Type = docc.plugins.python.html:render_type
    docc.plugins.python.nodes:List = docc.plugins.python.html:render_list
    docc.plugins.python.nodes:Tuple = docc.plugins.python.html:render_tuple
    docc.plugins.python.nodes:Docstring = docc.plugins.python.html:render_docstring
    docc.plugins.verbatim:Transcribed = docc.plugins.verbatim.html:render_transcribed
    docc.plugins.verbatim:Line = docc.plugins.verbatim.html:render_line
    docc.plugins.verbatim:Highlight = docc.plugins.verbatim.html:render_highlight
    docc.plugins.verbatim:Text = docc.plugins.verbatim.html:render_text
    docc.plugins.references:Definition = docc.plugins.html:references_definition
    docc.plugins.references:Reference = docc.plugins.html:references_reference
    docc.plugins.mistletoe:MarkdownNode = docc.plugins.mistletoe:render_html
    docc.plugins.listing:ListingNode = docc.plugins.listing:render_html
    docc.plugins.html:HTMLTag = docc.plugins.html:html_tag
    docc.plugins.html:TextNode = docc.plugins.html:text_node

[options.extras_require]
lint =
    isort>=5.10.1,<6
    pyre-check>=0.9.18,<0.10
    types-setuptools; implementation_name == "cpython"
    black>=22.10.0,<23; implementation_name == "cpython"
    flake8-spellcheck>=0.28,<0.29
    flake8-docstrings>=1.6,<2
    flake8-bugbear>=22.10.27,<23.0.0
    flake8>=5.0.4,<6

[flake8]
dictionaries=en_US,python,technical
docstring-convention = all
extend-ignore =
    E203    # Ignore: Whitespace before ':'
    D107    # Ignore: Missing docstring in __init__
    D200    # Ignore: One-line docstring should fit on one line with quotes
    D203    # Ignore: 1 blank line required before class docstring
    D205    # Ignore: blank line required between summary line and description
    D212    # Ignore: Multi-line docstring summary should start at the first line
    D400    # Ignore: First line should end with a period
    D401    # Ignore: First line should be in imperative mood
    D410    # Ignore: Missing blank line after section
    D411    # Ignore: Missing blank line before section
    D412    # Ignore: No blank lines allowed between a section header and its content
    D413    # Ignore: Missing blank line after last section
    D414    # Ignore: Section has no content
    D415    # Ignore: First line should end with a period, question mark, or exclamation point
    D416    # Ignore: Section name should end with a colon

extend-exclude =
    setup.py

# vim: set ft=dosini:
