[metadata]
name = docc
description = Python code documentation compiler
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: docc.__version__
url = https://github.com/SamWilsn/docc
license_files =
    LICENSE.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:

python_requires = >=3.10
install_requires =
    libcst>=1.0.1,<2
    mistletoe>=1.2.1,<2
    importlib-resources>=6.0.1,<7
    tomli>=2.0.1,<3
    rich>=13.5.2,<14
    Jinja2>=3.1.2,<4
    inflection>=0.5.1,<0.6
    typing-extensions>=4.7.1,<5

[options.packages.find]
where = src

[options.package_data]
docc =
    py.typed

docc.plugins.html =
    templates/**
    static/docc.css
    static/search.js
    static/chota/dist/chota.min.css
    static/fuse/dist/fuse.min.js

docc.plugins.listing =
    templates/**

docc.plugins.python =
    templates/**

[options.entry_points]
console_scripts =
    docc = docc.cli:main

docc.plugins =
    docc.python.discover = docc.plugins.python:PythonDiscover
    docc.python.build = docc.plugins.python:PythonBuilder
    docc.python.transform = docc.plugins.python:PythonTransform
    docc.html.transform = docc.plugins.html:HTMLTransform
    docc.html.discover = docc.plugins.html:HTMLDiscover
    docc.html.context = docc.plugins.html:HTMLContext
    docc.references.context = docc.plugins.references:IndexContext
    docc.references.index = docc.plugins.references:IndexTransform
    docc.mistletoe.transform = docc.plugins.mistletoe:DocstringTransform
    docc.mistletoe.reference = docc.plugins.mistletoe:ReferenceTransform
    docc.listing.discover = docc.plugins.listing:ListingDiscover
    docc.listing.build = docc.plugins.listing:ListingBuilder
    docc.resources.build = docc.plugins.resources:ResourceBuilder
    docc.files.build = docc.plugins.files:FilesBuilder
    docc.files.discover = docc.plugins.files:FilesDiscover
    docc.search.context = docc.plugins.search:SearchContext
    docc.search.transform = docc.plugins.search:SearchTransform
    docc.search.discover = docc.plugins.search:SearchDiscover
    docc.search.build = docc.plugins.search:SearchBuilder
    docc.debug.transform = docc.plugins.debug:DebugTransform
    docc.verbatim.transform = docc.plugins.verbatim:Transcribe

docc.plugins.html =
    docc.document:BlankNode = docc.plugins.html:blank_node
    docc.document:ListNode = docc.plugins.html:list_node
    docc.plugins.python.nodes:Module = docc.plugins.python.html:render_module
    docc.plugins.python.nodes:Class = docc.plugins.python.html:render_class
    docc.plugins.python.nodes:Attribute = docc.plugins.python.html:render_attribute
    docc.plugins.python.nodes:Name = docc.plugins.python.html:render_name
    docc.plugins.python.nodes:Access = docc.plugins.python.html:render_access
    docc.plugins.python.nodes:Function = docc.plugins.python.html:render_function
    docc.plugins.python.nodes:Parameter = docc.plugins.python.html:render_parameter
    docc.plugins.python.nodes:Type = docc.plugins.python.html:render_type
    docc.plugins.python.nodes:List = docc.plugins.python.html:render_list
    docc.plugins.python.nodes:Tuple = docc.plugins.python.html:render_tuple
    docc.plugins.python.nodes:Docstring = docc.plugins.python.html:render_docstring
    docc.plugins.verbatim:Transcribed = docc.plugins.verbatim.html:render_transcribed
    docc.plugins.verbatim:Line = docc.plugins.verbatim.html:render_line
    docc.plugins.verbatim:Highlight = docc.plugins.verbatim.html:render_highlight
    docc.plugins.verbatim:Text = docc.plugins.verbatim.html:render_text
    docc.plugins.references:Definition = docc.plugins.html:references_definition
    docc.plugins.references:Reference = docc.plugins.html:references_reference
    docc.plugins.mistletoe:MarkdownNode = docc.plugins.mistletoe:render_html
    docc.plugins.listing:ListingNode = docc.plugins.listing:render_html
    docc.plugins.html:HTMLTag = docc.plugins.html:html_tag
    docc.plugins.html:TextNode = docc.plugins.html:text_node

[options.extras_require]
lint =
    isort>=5.12.0,<6
    pyre-check>=0.9.18,<0.10
    types-setuptools>=68.1
    black>=23.7.0,<24
    flake8-spellcheck>=0.28,<0.29
    flake8-docstrings>=1.7,<2
    flake8-bugbear>=23.7.10,<24.0.0
    flake8>=6.1.0,<7

[flake8]
dictionaries=en_US,python,technical
docstring-convention = all
extend-ignore =
    E203
    D107
    D200
    D203
    D205
    D212
    D400
    D401
    D410
    D411
    D412
    D413
    D414
    D415
    D416

extend-exclude =
    setup.py

# vim: set ft=dosini:
